Add form validation

--- a/index.html
+++ b/index.html
@@ -547,12 +547,12 @@
                     </div>
                 </div>
                 <div class="popup__form">
-                    <form class="form ingridients" id="form" action="#">
+                    <form class="form ingridients" id="form2" action="#">
                         <div class="popup__form-input">
-                            <input type="text" class="mobile form__input _req" name="name" id="" placeholder="Name">
+                            <input type="text" class="mobile form__input__form2 _reqForm2" name="name" id="" placeholder="Name">
                         </div>
                         <div class="popup__form-input">
-                            <input type="text" class="mobile form__input _req" name="phone" id="" placeholder="Phone">
+                            <input type="text" class="mobile form__input__form2 _reqForm2" name="phone" id="" placeholder="Phone">
                         </div>
                         <div class="popup__form-input">
                             <textarea name="" class="mobileTextarea" id="" cols="30" rows="10" placeholder="Comment"></textarea>
@@ -653,12 +653,12 @@
                     </div>
                 </div>
                 <div class="popup__form">
-                    <form class="form ingridients" id="form" action="#">
+                    <form class="form ingridients" id="form3" action="#">
                         <div class="popup__form-input">
-                            <input type="text" class="mobile form__input _req" name="name" id="" placeholder="Name">
+                            <input type="text" class="mobile form__input__form3 _reqForm3" name="name" id="" placeholder="Name">
                         </div>
                         <div class="popup__form-input">
-                            <input type="text" class="mobile form__input _req" name="phone" id="" placeholder="Phone">
+                            <input type="text" class="mobile form__input__form3 _reqForm3" name="phone" id="" placeholder="Phone">
                         </div>
                         <div class="popup__form-input">
                             <textarea name="" class="mobileTextarea" id="" cols="30" rows="10" placeholder="Comment"></textarea>
@@ -759,12 +759,12 @@
                     </div>
                 </div>
                 <div class="popup__form">
-                    <form class="form ingridients" id="form" action="#">
+                    <form class="form ingridients" id="form4" action="#">
                         <div class="popup__form-input">
-                            <input type="text" class="mobile form__input _req" name="name" id="" placeholder="Name">
+                            <input type="text" class="mobile form__input__form4 _reqForm4" name="name" id="" placeholder="Name">
                         </div>
                         <div class="popup__form-input">
-                            <input type="text" class="mobile form__input _req" name="phone" id="" placeholder="Phone">
+                            <input type="text" class="mobile form__input__form4 _reqForm4" name="phone" id="" placeholder="Phone">
                         </div>
                         <div class="popup__form-input">
                             <textarea name="" class="mobileTextarea" id="" cols="30" rows="10" placeholder="Comment"></textarea>
@@ -818,15 +818,15 @@
                     Due to the overwhelming volume of franchise requests we are not accepting new franchisee applications at this time. Once the application process resumes, we will contact you for further information. Please fill out the contact information below and we will reach out for additional information. We appreciate your patience.
                 </div>
                 <div class="popup__franchise-form">
-                    <form class="form franchise" id="form" action="#">
+                    <form class="form franchise" id="formFranchise" action="#">
                         <div class="popup__form-input">
-                            <input type="text" class="mobile franchise form__input _req" name="name" id="" placeholder="Name">
+                            <input type="text" class="mobile franchise form__input_franchise _reqFranchise" name="name" id="" placeholder="Name">
                         </div>
                         <div class="popup__form-input">
-                            <input type="text" class="mobile franchise form__input _req" name="phone" id="" placeholder="Phone">
+                            <input type="text" class="mobile franchise form__input_franchise _reqFranchise" name="phone" id="" placeholder="Phone">
                         </div>
                         <div class="popup__form-input">
-                            <input type="text" class="mobile franchise franchiseForm form__input _req _email" name="email" id="" placeholder="Email">
+                            <input type="text" class="mobile franchise franchiseForm form__input_franchise _reqFranchise _email" name="email" id="" placeholder="Email">
                         </div>
                         <div class="popup__form-input">
                             <textarea name="" class="mobileTextarea mobileTextareaFranchise" id="" cols="30" rows="10" placeholder="Comment"></textarea>
